tests/NormalTests/paczka2/big_fuzzy/79716559.err
Error in line 26: Tq5ojiDMeM1 A799 80,0
Error in line 30: bUQST S609 1,3
Error in line 33: bUQST A799 74,1
Error in line 31: oMcTllOs84 S609 1,8
Error in line 39: oMcTllOs84 A291 83,2
Error in line 50: JhU S609 11,7
Error in line 53: oMcTllOs84 A291 4,9
Error in line 54: A291 A291 18,5
Error in line 72: oMcTllOs84 S609 2,5
Error in line 80: oMcTllOs84 A291 49,1
Error in line 76: ioEqIItcw A291 18,4
Error in line 85: ioEqIItcw A799 18,9
Error in line 92: Aw7R5ajL9H A799 1,04
Error in line 91: Aw7R5ajL9H S609 154,2
Error in line 104: ioEqIItcw S609 65,7
Error in line 101: Aw7R5ajL9H S609 21,3
Error in line 110: JhU A130 72,4
Error in line 112: bUQST A799 14,1
Error in line 117: bUQST A291 4,8
Error in line 106: ioEqIItcw A799 23,2
Error in line 109: Aw7R5ajL9H A799 682,4
Error in line 132: Aw7R5ajL9H A130 45,8
Error in line 137: Aw7R5ajL9H A291 -4,8
Error in line 136: Aw7R5ajL9H A291 80,0
Error in line 138: Aw7R5ajL9H A799 88,4
Error in line 171: Aw7R5ajL9H S609 1,29
Error in line 167: bUQST S609 46,5
Error in line 180: oMcTllOs`4 A291 25,2
Error in line 177: oMcTllOs84 A291 109,9
Error in line 185: A291 A291 5,3
Error in line 186: oMcTllOs84 A799 91,5
Error in line 194: oMcTllOs84 A130 27,61
Error in line 203: bUQST A799 36,0
Error in line 190: A291 A799 43,5
Error in line 207: A291 A291 64,3
Error in line 163: JhU A130 17,0
Error in line 170: Aw7R5ajL9H S609 0,9
Error in line 225: bUQST A130 -2,0
Error in line 221: bUQST A130 100,0
Error in line 226: bUQST A291 21,9
Error in line 231: JhU 609 75,8
Error in line 227: bUQST A130 40,0
Error in line 234: bUQST A799 12,7
Error in line 235: bUQST A291 34,2
Error in line 239: bUQST S609 321,}
Error in line 240: oMcTllOs84 A130 98,9
Error in line 233: A291 S609 18,7
Error in line 236: bUQST S609 75,8
